--- a/src/App.css
+++ b/src/App.css
@@ -25,26 +25,25 @@
   filter: brightness(0.8);
 }
 .content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vw;
- top: 100px;
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
-  gap: 20px;
+  gap: 80px;
+  padding: 20px;
 }
 
 .landing_content {
- margin-top: 430px;
-  margin-left: 100px;
-  transform: translate(-50%, -50%);
   z-index: 1;
   text-align: center;
-  /* background-color: red; */
   width: 400px;
-  height: 400px;
+  max-width: 90%;
   display: flex;
   align-items: center;
   flex-direction: column;
